k8s-manifests/ingress-loadbalancer/ingress-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pingy-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingy-client-app-helm
  namespace: pingy-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: pingy-namespace
spec:
  type: ClusterIP  # Let Ingress expose it, no need for LoadBalancer
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingy-client-ingress-helm
  namespace: pingy-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Use the ingress class deployed with your controller
  rules:
  - host: upendra.gusain.co.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
